fix for ios viewport on safari in the home section

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     gap: 80px;
-    height: 100vh;
+    height: 100dvh;
     min-height: 700px;
 }
 
@@ -26,7 +26,7 @@
     background: var(--third-color);
     color: var(--color-white);
     padding: 3px 8px;
-    font-size: 12px;
+    font-size: 14px;
     border-radius: 5px;
 }
 
@@ -91,9 +91,9 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    min-width: 80vh;
     flex: 1;
     min-width: 300px;
+    max-width: 90%;
 }
 
 .image {
@@ -102,6 +102,7 @@
     border-radius: 55% 45% 55% 45%;
     overflow: hidden;
     animation: imgFloat 7s ease-in-out infinite;
+    will-change: transform;
 }
 
 .image img {
@@ -111,6 +112,10 @@
 }
 
 @keyframes imgFloat {
+    0%,
+    100% {
+        transform: translateY(0);
+    }
     50% {
         transform: translateY(10px);
         border-radius: 45% 55% 45% 55%;
